--- a/sass/modules/causes-details/_causes-details.scss
+++ b/sass/modules/causes-details/_causes-details.scss
@@ -258,7 +258,7 @@
 
                         .actions,
                         .goals {
-                            width: 90px;
+                            width: 110px;
                         }
 
                         h1 {
