--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -390,7 +390,7 @@
         gap: 16px;
 
         &:first-child {
-          align-items: flex-start;
+          align-items: center;
 
           .contact-icon {
             margin-top: 5px;
